--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
     "rxjs": "~6.6.0",
+    "scss-spinners": "^2.0.4",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
