--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-ui-loader": "^11.0.0",
     "rxjs": "~6.6.0",
     "scss-spinners": "^2.0.4",
     "tslib": "^2.1.0",
