--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~6.6.0",
     "scss-spinners": "^2.0.4",
     "tslib": "^2.1.0",
+    "underscore": "^1.13.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@ngrx/schematics": "^12.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/underscore": "^1.11.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
