--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
+    "bootstrap": "^5.0.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-ui-loader": "^11.0.0",
     "rxjs": "~6.6.0",
