--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
     "bootstrap": "^5.0.2",
+    "hamburgers": "^1.1.3",
     "ngx-bootstrap": "^6.2.0",
     "ngx-ui-loader": "^11.0.0",
     "rxjs": "~6.6.0",
