--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/vendor/bootstrap/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
