--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.2",
+    "@angular/cdk": "^12.2.5",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
@@ -24,6 +25,7 @@
     "bootstrap": "^5.0.2",
     "hamburgers": "^1.1.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-scrollbar": "^8.0.0",
     "ngx-ui-loader": "^11.0.0",
     "rxjs": "~6.6.0",
     "scss-spinners": "^2.0.4",
